<?xml version="1.0"?>
<package format="2">
  <name>poc</name>
  <version>1.0.0</version>
  <description>Package containing all PoC</description>
  <maintainer email="barroth.thedragon@gmail.com"> Barroth </maintainer>
  <license>Bosch ECC</license>

  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>utils</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>utils</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>utils</exec_depend>

</package>
